# Autonix

./: TODOS.md  package.json  pnpm-lock.yaml
.github/workflows/: auto-version-bump.yml
apps/backend/: .env.example  langgraph.json  main.py  package.json  pyproject.toml
apps/backend/agent/: graph.py  provider.py  state.py
apps/backend/agents/: provider.py  state.py
apps/backend/src/orchestrator/: __init__.py  configuration.py  graph.py  prompts.py  provider.py  state.py  tools.py
apps/backend/src/simple/: graph.py
apps/backend/src/suggest-questions/: graph.py
apps/backend/src/tools/: README.md
apps/backend/src/utils/: image_processing.py
apps/backend/static/: pyproject.toml
apps/backend/utils/: logging.py
apps/local-web/: package.json  tailwind.config.ts  tsconfig.json
apps/local-web/app/: layout.tsx
apps/local-web/app/chat/[chatId]/: page.tsx
apps/local-web/components/chat/: chat-input.tsx  chat-interface.tsx  chat-main.tsx  chat-message-bubble.tsx  chat-sidebar.tsx  expanded-sidebar.tsx  image-with-loader.tsx  markdown-view.tsx  thinking.tsx  tool-call.tsx
apps/local-web/lib/: store.ts
apps/web/: package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: layout.tsx  not-found.tsx  page.tsx
apps/web/app/api/get-title/: route.ts
apps/web/app/auth/: page.tsx
apps/web/app/chat/: page.tsx
apps/web/app/chat/[chatId]/: page.tsx
apps/web/app/chat/test/: page.tsx
apps/web/app/chat/v2/: page.tsx
apps/web/components/: animated-social-icon.tsx  floating-nav.tsx  smart-link.tsx  theme-initializer.tsx  theme-switcher.tsx
apps/web/components/auth/: auth-form.tsx
apps/web/components/chat/: activity-timeline.tsx  chat-input.tsx  chat-interface.tsx  chat-main.tsx  chat-message-bubble.tsx  chat-sidebar.tsx  expanded-sidebar.tsx  image-with-loader.tsx  markdown-view.tsx  mermaid-diagram.tsx  thinking.tsx  tool-call.tsx
apps/web/components/landing/: contact.tsx  features.tsx  footer.tsx  hero.tsx
apps/web/lib/: store.ts  types.ts
