[project]
name = "backend"
version = "0.1.0"
description = "Agentic Backend for Autonix"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-ollama>=0.3.5",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "pydantic>=2.11.7",
]
